compiler/examples/assignment.wheel
fn f() -> () {}
fn g() -> () {}

fn add3(n: u64) -> u64 {
    n += 1;
    n += 1;
    n += 1;
    n
}

fn main() -> u64 {
    // f = g; // error

    let fptr = f; // implicitly converted to a function pointer
    fptr = g; // it's ok to mutate the pointer
    fptr();

    add3(0)
}
